<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="imageDesc">Image</string>
    <string name="title_activity_new_project">NewProject</string>
    <string name="title_activity_new_task">NewTask</string>
    <string name="title_activity_task">Task</string>
    
    <string name="currentStatus">Status:</string>
    <string name="videoAppChooser">Record video with</string>
    <!-- Generic Strings -->
    <string name="dateHint">--/--/----</string>

    <!-- MainActivity Activity/Layout Strings -->
    <string name="title_activity_project_list">Project List</string>
    
    <!-- ProjectList Activity/Layout Strings -->
    <string name="projectFindHint">Find Project</string>
    
    <!-- Add Task Name Activity/Layout Strings -->
    <string name="title_activity_tasks_list">TasksList</string>
    
    <!-- NewProject Activity/Layout String -->
    <string name="new_project">Add New Project</string>
    <string name="project_name">Project Name:</string>
    <string name="addProjectHint">Project Name</string>
    <string name="status">Initial Status:</string>
    <string name="addstatusHint">Initial Status</string>
    <string name="projectStartDate">Start Date:</string>
    <string name="projectDueDate">Due Date:</string>
    <string name="addProjectButton">Add Project</string>
    
    <string name="update">Update task</string>
    
    <!-- TaskList Activity/Layout Strings -->
    <string name="taskFindHint">Find Task</string>
    
    <!-- New Task Activity/Layout Strings -->
    <string name="new_task">Add New Task</string>
    <string name="addTaskName">Task Name:</string>
    <string name="addTaskHint">Task Name</string>
    <string name="subtask">Subtask</string>
    <string name="nestUnder">Nest Under:</string>
    <string name="nestUnderHint">Nest Task</string>
    <string name="addTaskButton">Add Task</string>
    <string name="title_activity_pictures_manager">PicturesManager</string>
    
    <!-- Project Menu strings -->
    <string name="about">About</string>
    <string name="syncall">Sync All</string>
    <string name="user">User</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    
    <string name="photos">Photos</string>

    <!-- NewTask Strings -->
    <string name="priority">Priority:</string>
    <string name="percentage">Percentage done:</string>
    <string name="taskStartDate">Task start date:</string>
    <string name="taskDueDate">Task due date:</string>
    <string name="taskDescription">Task description:</string>
    <string name="descriptionHint">Task description</string>
    
    <!-- Menus Strings -->
    <string name="searchProjectItem">Project </string>
    <string name="searchTaskItem">Task </string>
    <string name="searchProjectMenu">Search Project</string>
    <string name="searchTaskMenu">Search Task</string>
    <string name="deleteProjectMenu">Delete Project</string>
    <string name="deleteTaskMenu">Delete Task</string>
    <string name="addProjectMenu">Add Project</string>
    <string name="addTaskMenu">Add Task</string>
    <string name="projectPhotos">Project Photos</string>
    
    <!-- Dialog -->
    <string name="statusHint">Status Option</string>
    <string name="dialogOk">OK</string>
    <string name="dialogCancel">Cancel</string>
    <string name="updateDialog">Update</string>
    
    <!-- Warnings Toast -->
    <string name="projectUpdated">Project was updated</string>
    <string name="projectAdded">"Project added"</string>
    <string name="taskAdded">Task added</string>
    <string name="dueDateError">Due date is before start date!</string>
    <string name="incomplete">There is missing information!</string>
    <string name="createAccount">Create a New Account</string>
    <string name="addAccountName">Account Name</string>
    <string name="addEmail">Email Address</string>
    <string name="registerAccountButton">Register Account</string>
    
    <!-- VoiceNote Fragment -->
    <string name="voiceAppChooser">Record voice note with</string>
    <string name="loginToAccount">Log In:</string>
    <string name="log_in">Log In</string>
    <string name="addPassword">Password</string>
    <string name="loginToExistent">Log In to Existent Account</string>
</resources>
