<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:id="@+id/LinearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="30dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/uselessId_AccountName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:maxLines="1"
	        android:text="@string/addAccountName" />
	
	    <EditText
	        android:id="@+id/newAccount_AccountName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/addTaskHint"
	        android:text="@string/addAccountName" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/uselessId_email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:maxLines="1"
	        android:text="@string/addEmail" />
	
	    <EditText
	        android:id="@+id/newAccount_Email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textEmailAddress"
	        android:hint="@string/addTaskHint"
	        android:text="@string/addEmail" >
	    </EditText>
	    
	    <Button
	        android:id="@+id/newTask_AddTask"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:text="@string/registerAccountButton" />
	
	</LinearLayout>
    
</ScrollView>